--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -8,5 +8,6 @@
 @import "partials/business";
 @import "partials/hairfie";
 @import "partials/home";
+@import "partials/homePro";
 @import "partials/dashboard";
 @import "partials/hairfiesList";
