--- a/public/scss/partials/_homePro.scss
+++ b/public/scss/partials/_homePro.scss
@@ -70,6 +70,7 @@
         @media screen and (max-width: $screen-sm-min) {
             h1 {
                 font-size: 20px;
+                text-align: center;
             }
 
             li {
