--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -1,26 +1,44 @@
 nav.header {
-    height: 100px;
     background-color: $grey-header;
-
-    .container {
-        height: 100%;
-    }
 
     #formLogin {
         padding: 17px;
     }
 }
-.navbar-brand,
-.navbar-nav li a  {
-    line-height: 100px;
-    height: 100px;
-    padding-top: 0;
+
+@media (min-width: $screen-sm-min) {
+    nav.header {
+        height: 100px;
+
+        .container {
+            height: 100%;
+        }
+    }
+
+    .navbar-brand,
+    .navbar-nav li a  {
+        line-height: 100px;
+        height: 100px;
+        padding-top: 0;
+    }
+
+    #logo {
+        width:138px;
+        height:38px;
+        margin-top: 32px;
+    }
+
+    .dropdown-menu li a {
+        line-height: 50px;
+        height: 50px;
+    }
 }
 
-#logo {
-    width:138px;
-    height:38px;
-    margin-top: 32px;
+@media (max-width: $screen-sm-min) {
+
+    #logo {
+        width:70px;
+    }
 }
 
 img.profile {
