--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -10,4 +10,5 @@
 @import "partials/home";
 @import "partials/homePro";
 @import "partials/dashboard";
+@import "partials/proLayout";
 @import "partials/hairfiesList";
