--- a/public/scss/partials/_dashboard.scss
+++ b/public/scss/partials/_dashboard.scss
@@ -1,41 +1,11 @@
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 100px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: $red-hairfie;
+.dashboard {
+  .main {
+    padding: 30px;
   }
-}
 
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-  color: #FFFFFF;
-
-  span.icon {
-    float: right;
-  }
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: $grey;
-  background-color: $grey-body;
-  span.icon {
-    display: none;
+  @media (min-width: $screen-sm-min) {
+    .main {
+      margin-top: 100px;
+    }
   }
 }
