--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5859,6 +5859,25 @@ div.day {
   max-height: 1000px;
   overflow-x: scroll; }
 
+.business-dashboard h3, .business-dashboard h1 {
+  font-weight: 200; }
+.business-dashboard .title {
+  padding: 15px; }
+  .business-dashboard .title span {
+    display: inline-block; }
+  .business-dashboard .title img {
+    height: 30px;
+    width: 30px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+    margin-right: 15px; }
+.business-dashboard .business-dashboard-item .thumbnail {
+  height: 150px; }
+  .business-dashboard .business-dashboard-item .thumbnail a {
+    position: absolute;
+    bottom: 30px;
+    right: 25px; }
+
 .proLayout .navbar .container-fluid {
   padding-left: 20px;
   padding-right: 20px; }
