--- a/public/scss/partials/_dashboard.scss
+++ b/public/scss/partials/_dashboard.scss
@@ -18,3 +18,33 @@
 .business-item {
 
 }
+
+.business-dashboard {
+  h3, h1 {
+    font-weight: 200;
+  }
+
+  .title {
+    padding: 15px;
+
+    span {
+      display: inline-block;
+    }
+    img {
+      height: 30px;
+      width: 30px;
+      margin-top: 0px;
+      margin-bottom: 15px;
+      margin-right: 15px;
+    }
+  }
+  .business-dashboard-item .thumbnail {
+    height: 150px;
+
+    a {
+      position: absolute;
+      bottom: 30px;
+      right: 25px;
+    }
+  }
+}
