--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5829,8 +5829,7 @@ div.day {
         text-align: center; }
     .home-pro .row.first .claim {
       background-color: rgba(255, 255, 255, 0.8);
-      padding: 30px;
-      margin-top: 30px; }
+      padding: 30px; }
       @media screen and (max-width: 768px) {
         .home-pro .row.first .claim {
           margin: auto;
