--- a/public/scss/partials/_homePro.scss
+++ b/public/scss/partials/_homePro.scss
@@ -45,7 +45,7 @@
         .claim {
             background-color: rgba(255,255,255,0.8);
             padding: 30px;
-            margin-top: 30px;
+            //margin-top: 30px;
 
             @media screen and (max-width: $screen-sm-min) {
                 //margin: 30px;
