--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -3,6 +3,10 @@ nav.header {
 
     #formLogin {
         padding: 17px;
+        min-width: 250px;
+          input {
+            margin-bottom: 5px;
+          }
     }
 }
 
