--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -162,4 +162,8 @@ div.day {
 
 .row.business-hairfies {
     margin-top: 50px;
+    .hairfie-picture {
+        min-height: 150px;
+        min-width: 150px;
+    }
 }
