--- a/public/scss/partials/_colors.scss
+++ b/public/scss/partials/_colors.scss
@@ -7,6 +7,7 @@ $red-title: #FE5B5F;
 $red-hairfie: #EA5C62;
 $black: #333E49;
 $grey-footer: #dfe1e4;
+$dark-grey: #929292;
 
 .label-red {
     @extend .label-default;
