--- a/public/scss/partials/_dashboard.scss
+++ b/public/scss/partials/_dashboard.scss
@@ -16,7 +16,30 @@
 }
 
 .business-item {
-
+    .add-file {
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        width: 95%;
+        height: 200px;
+        margin: 9px;
+        background: $dark-grey url(../img/add-picture.png) center no-repeat;
+    }
+    .add-file input[type=file] {
+        position: absolute;
+        top: 0;
+        right: 0;
+        min-width: 100%;
+        min-height: 100%;
+        font-size: 100px;
+        text-align: right;
+        filter: alpha(opacity=0);
+        opacity: 0;
+        outline: none;
+        background: white;
+        cursor: inherit;
+        display: block;
+    }
 }
 
 .business-dashboard {
