--- a/public/scss/partials/_hairfiesList.scss
+++ b/public/scss/partials/_hairfiesList.scss
@@ -1,6 +1,17 @@
 $hairfie-width: 225px;
 $circle-width: 25px;
 
+.red-circle {
+    width: $circle-width;
+    height: $circle-width;
+    color: white;
+    font-weight: 200;
+    border-radius: 50%;
+    text-align: center;
+    background: $red-hairfie;
+    font-size: 10px;
+}
+
 
 .hairfies-list {
     margin: auto;
@@ -23,18 +34,19 @@ $circle-width: 25px;
         }
 
         .circle {
-            width: $circle-width;
-            height: $circle-width;
-            border-radius: 50%;
-            font-size: 10px;
-            color: white;
+            @extend .red-circle;
             line-height: $circle-width;
-            font-weight: 200;
-            text-align: center;
-            background: $red-hairfie;
             position: absolute;
             top: 10px;
             left: 10px;
+        }
+
+        .delete-button {
+            @extend .red-circle;
+            line-height: 1;
+            position: absolute;
+            top: 10px;
+            right: 10px;
         }
     }
 }
