--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7881,15 +7881,17 @@ div.day {
   .row.home p {
     font-size: 16px; } }
 .row.home img#iphone {
-  width: auto;
-  height: 100%; }
+  width: auto; }
   @media screen and (min-width: 768px) {
     .row.home img#iphone {
       position: fixed;
-      bottom: -100px; } }
+      bottom: -100px;
+      height: 100%; } }
   @media screen and (max-width: 992px) {
     .row.home img#iphone {
-      margin: auto; } }
+      margin: auto;
+      max-width: 80%;
+      max-height: 100%; } }
 
 .btn-app-store {
   margin-top: 40px; }
