--- a/public/scss/partials/_home.scss
+++ b/public/scss/partials/_home.scss
@@ -43,12 +43,14 @@
         @media screen and (min-width: $screen-sm-min) {
             position: fixed;
             bottom: -100px;
+            height: 100%;
         }
         @media screen and (max-width: $screen-md-min) {
             margin: auto;
+            max-width: 80%;
+            max-height: 100%;
         }
         width: auto;
-        height: 100%;
     }
 
 }
