--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -17,3 +17,4 @@ $fa-font-path: "../components/font-awesome/fonts";
 @import "partials/proLayout";
 @import "partials/hairfiesList";
 @import "partials/typeahead";
+@import "partials/search";
