Add write verified review page

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -18,3 +18,4 @@ $fa-font-path: "../components/font-awesome/fonts";
 @import "partials/hairfiesList";
 @import "partials/typeahead";
 @import "partials/search";
+@import "partials/starRating";
