--- a/public/scss/partials/_colors.scss
+++ b/public/scss/partials/_colors.scss
@@ -9,6 +9,7 @@ $hairfie: #fe5b5f;
 $black: #333E49;
 $grey-footer: #dfe1e4;
 $dark-grey: #929292;
+$background-grey: #eeeeee;
 
 .label-red {
     @extend .label-default;
