--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -24,6 +24,8 @@ nav.header {
         line-height: 100px;
         height: 100px;
         padding-top: 0;
+        font-weight: 200;
+        font-size: 21px;
     }
 
     #logo {
