--- a/public/scss/partials/_booking.scss
+++ b/public/scss/partials/_booking.scss
@@ -1,5 +1,34 @@
 $open-color: #00CF98;
 
+.booking {
+
+    .row {
+        margin-top: 50px;
+    }
+
+    .left {
+        .business {
+            h2 { font-size: 25px; }
+            span.address { font-size: 18px; }
+            height: 130px;
+            text-align: center;
+        }
+
+        .picture {
+            height: 100%;
+
+            img {
+                max-height: 100%
+            }
+        }
+    }
+
+    .right {
+        background-color: $background-grey;
+        padding: 30px;
+    }
+}
+
 .rbc-calendar td,
 .rbc-calendar th {
   text-align: center;
@@ -22,4 +51,16 @@ $open-color: #00CF98;
 }
 .rbc-calendar td.disabled {
 
+}
+
+.btn.timeslot {
+    margin: 5px;
+}
+
+.btn.timeslot:focus { outline: none; }
+
+.btn.timeslot.selected {
+    background-color: #357ebd;
+    color: #fff;
+    font-weight: bold;
 }
