--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7587,7 +7587,16 @@ button.close {
 
 .btn-red {
   background-color: #fe5b5f;
-  color: white; }
+  color: white;
+  border: none; }
+  .btn-red:hover {
+    color: #818896; }
+
+.btn-red a {
+  color: white;
+  text-decoration: none; }
+  .btn-red a:hover {
+    color: #818896; }
 
 .icon, .icon-address, .icon-phone, .icon-website, .icon-timetable, .icon-description, .icon-right-arrow {
   display: inline-block;
@@ -8156,8 +8165,10 @@ div.day {
 .booking .row {
   margin-top: 50px; }
 .booking .left .business {
-  height: 130px;
-  text-align: center; }
+  height: 150px;
+  text-align: center;
+  max-width: 350px;
+  margin: auto; }
   .booking .left .business h2 {
     font-size: 25px; }
   .booking .left .business span.address {
@@ -8166,9 +8177,18 @@ div.day {
   height: 100%; }
   .booking .left .picture img {
     max-height: 100%; }
+.booking .left .rbc-calendar {
+  max-width: 350px;
+  margin: auto; }
+.booking .left .timeselect {
+  max-width: 350px;
+  margin: auto; }
 .booking .right {
   background-color: #eeeeee;
   padding: 30px; }
+  .booking .right form {
+    max-width: 350px;
+    margin: auto; }
 
 .rbc-calendar td,
 .rbc-calendar th {
