add multi photo on hairfie

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,4 +1,5 @@
 $fa-font-path: "../components/font-awesome/fonts";
+$icon-font-path: "../components/bootstrap/fonts/";
 
 // bower:scss
 @import "../components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
