--- a/public/scss/partials/_booking.scss
+++ b/public/scss/partials/_booking.scss
@@ -110,3 +110,9 @@
 .panel-heading .panel-title a.collapsed:after {
     content: $fa-var-chevron-right;
 }
+
+.confirmation {
+    h3 {
+        text-align: left;
+    }
+}
