--- a/public/scss/partials/_booking.scss
+++ b/public/scss/partials/_booking.scss
@@ -112,7 +112,17 @@
 }
 
 .confirmation {
+    h2 {
+        i {
+            color: $open-color;
+            margin-right: 20px;
+        }
+    }
     h3 {
         text-align: left;
+    }
+
+    .btn-apple {
+        height: 31px;
     }
 }
