--- a/public/scss/partials/_booking.scss
+++ b/public/scss/partials/_booking.scss
@@ -24,7 +24,7 @@
             height: 100%;
 
             img {
-                max-height: 100%
+                max-height: 100%;
             }
         }
 
