--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -3,8 +3,11 @@ div.row#business-header {
     margin-top: 20px;
     div.pictures {
         height: 100%;
+        padding: 0;
+
         img {
-            max-height: 100%;
+            height: 100%;
+            width: 100%;
         }
 
     }
@@ -44,6 +47,36 @@ div.row#business-header {
             .label {
                 font-size: 14px;
                 font-weight: 200;
+            }
+
+            &.discounts {
+                .legend {
+                    font-weight: 200;
+                    font-size: 14px;
+                    font-style: italic;
+                    padding-left: 5px;
+                }
+            }
+        }
+
+        p.booking-container {
+            position: absolute;
+            bottom: -10px;
+            right: 15px;
+            left: 15px;
+        }
+
+        .btn-booking {
+            @extend .btn-red;
+            @extend .btn-block;
+
+            font-weight: 200;
+            height: 40px;
+
+            &:focus, &:hover, &:active {
+                opacity: 0.7;
+                color: white !important;
+                text-decoration: none !important;
             }
         }
     }
