--- a/public/scss/partials/_colors.scss
+++ b/public/scss/partials/_colors.scss
@@ -11,6 +11,7 @@ $grey-footer: #dfe1e4;
 $dark-grey: #929292;
 $background-grey: #eeeeee;
 $discount-color: #ff6600;
+$discount-background-color: #F9F9FA;
 $open-color: #5cb85c;
 
 .label-red {
