--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7665,7 +7665,7 @@ button.close {
     text-decoration: none;
     color: #818896; }
 
-.icon, .icon-address, .icon-phone, .icon-website, .icon-timetable, .icon-description, .icon-right-arrow, .icon-discount {
+.icon, .icon-address, .icon-phone, .icon-website, .icon-timetable, .icon-description, .icon-right-arrow, .icon-discount, .icon-price, .icon-open, .icon-closed {
   display: inline-block;
   width: 20px;
   height: 20px; }
@@ -7696,6 +7696,18 @@ button.close {
 
 .icon-discount {
   background: url(/img/icons/discount@2x.png) no-repeat center;
+  background-size: 20px 20px; }
+
+.icon-price {
+  background: url(/img/icons/price@2x.png) no-repeat center;
+  background-size: 20px 20px; }
+
+.icon-open {
+  background: url(/img/icons/open@2x.png) no-repeat center;
+  background-size: 20px 20px; }
+
+.icon-closed {
+  background: url(/img/icons/closed@2x.png) no-repeat center;
   background-size: 20px 20px; }
 
 html {
@@ -7783,14 +7795,16 @@ div.row#business-header {
     div.row#business-header div.infos p.info {
       border-bottom: 1px solid #E5E5E8;
       font-size: 16px;
-      min-height: 30px; }
+      min-height: 30px; 
+      font-weight: 200;
+}
       div.row#business-header div.infos p.info.address {
         min-height: 50px;
         font-weight: 200; }
       div.row#business-header div.infos p.info span {
         display: inline-block;
         float: left; }
-      div.row#business-header div.infos p.info .icon, div.row#business-header div.infos p.info .icon-address, div.row#business-header div.infos p.info .icon-phone, div.row#business-header div.infos p.info .icon-website, div.row#business-header div.infos p.info .icon-timetable, div.row#business-header div.infos p.info .icon-description, div.row#business-header div.infos p.info .icon-right-arrow, div.row#business-header div.infos p.info .icon-discount {
+      div.row#business-header div.infos p.info .icon, div.row#business-header div.infos p.info .icon-address, div.row#business-header div.infos p.info .icon-phone, div.row#business-header div.infos p.info .icon-website, div.row#business-header div.infos p.info .icon-timetable, div.row#business-header div.infos p.info .icon-description, div.row#business-header div.infos p.info .icon-right-arrow, div.row#business-header div.infos p.info .icon-discount, div.row#business-header div.infos p.info .icon-price, div.row#business-header div.infos p.info .icon-open, div.row#business-header div.infos p.info .icon-closed {
         float: left; }
       div.row#business-header div.infos p.info span.content {
         margin-left: 20px;
@@ -8150,7 +8164,7 @@ div.day {
   padding-right: 20px;
   padding-left: 20px;
   color: #FFFFFF; }
-  .nav-sidebar > li > a span.icon, .nav-sidebar > li > a span.icon-address, .nav-sidebar > li > a span.icon-phone, .nav-sidebar > li > a span.icon-website, .nav-sidebar > li > a span.icon-timetable, .nav-sidebar > li > a span.icon-description, .nav-sidebar > li > a span.icon-right-arrow, .nav-sidebar > li > a span.icon-discount {
+  .nav-sidebar > li > a span.icon, .nav-sidebar > li > a span.icon-address, .nav-sidebar > li > a span.icon-phone, .nav-sidebar > li > a span.icon-website, .nav-sidebar > li > a span.icon-timetable, .nav-sidebar > li > a span.icon-description, .nav-sidebar > li > a span.icon-right-arrow, .nav-sidebar > li > a span.icon-discount, .nav-sidebar > li > a span.icon-price, .nav-sidebar > li > a span.icon-open, .nav-sidebar > li > a span.icon-closed {
     float: right; }
 
 .nav-sidebar > .active > a,
@@ -8158,7 +8172,7 @@ div.day {
 .nav-sidebar > .active > a:focus {
   color: #818896;
   background-color: #F6F6F7; }
-  .nav-sidebar > .active > a span.icon, .nav-sidebar > .active > a span.icon-address, .nav-sidebar > .active > a span.icon-phone, .nav-sidebar > .active > a span.icon-website, .nav-sidebar > .active > a span.icon-timetable, .nav-sidebar > .active > a span.icon-description, .nav-sidebar > .active > a span.icon-right-arrow, .nav-sidebar > .active > a span.icon-discount,
+  .nav-sidebar > .active > a span.icon, .nav-sidebar > .active > a span.icon-address, .nav-sidebar > .active > a span.icon-phone, .nav-sidebar > .active > a span.icon-website, .nav-sidebar > .active > a span.icon-timetable, .nav-sidebar > .active > a span.icon-description, .nav-sidebar > .active > a span.icon-right-arrow, .nav-sidebar > .active > a span.icon-discount, .nav-sidebar > .active > a span.icon-price, .nav-sidebar > .active > a span.icon-open, .nav-sidebar > .active > a span.icon-closed,
   .nav-sidebar > .active > a:hover span.icon,
   .nav-sidebar > .active > a:hover span.icon-address,
   .nav-sidebar > .active > a:hover span.icon-phone,
@@ -8167,6 +8181,9 @@ div.day {
   .nav-sidebar > .active > a:hover span.icon-description,
   .nav-sidebar > .active > a:hover span.icon-right-arrow,
   .nav-sidebar > .active > a:hover span.icon-discount,
+  .nav-sidebar > .active > a:hover span.icon-price,
+  .nav-sidebar > .active > a:hover span.icon-open,
+  .nav-sidebar > .active > a:hover span.icon-closed,
   .nav-sidebar > .active > a:focus span.icon,
   .nav-sidebar > .active > a:focus span.icon-address,
   .nav-sidebar > .active > a:focus span.icon-phone,
@@ -8174,7 +8191,10 @@ div.day {
   .nav-sidebar > .active > a:focus span.icon-timetable,
   .nav-sidebar > .active > a:focus span.icon-description,
   .nav-sidebar > .active > a:focus span.icon-right-arrow,
-  .nav-sidebar > .active > a:focus span.icon-discount {
+  .nav-sidebar > .active > a:focus span.icon-discount,
+  .nav-sidebar > .active > a:focus span.icon-price,
+  .nav-sidebar > .active > a:focus span.icon-open,
+  .nav-sidebar > .active > a:focus span.icon-closed {
     display: none; }
 
 .red-circle, .hairfies-list .hairfie-picture .circle, .hairfies-list .hairfie-picture .delete-button {
